Modified conflict error

--- a/src/scss/layout/_top.scss
+++ b/src/scss/layout/_top.scss
@@ -18,3 +18,8 @@
     background-position: 200% 100%;
   }
 }
+
+.l-top-request {
+  background: linear-gradient(to bottom,#e4e4e4 90%, white);
+  padding: 50px 0;
+}
