--- a/src/scss/layout/_top.scss
+++ b/src/scss/layout/_top.scss
@@ -15,11 +15,17 @@
     padding-left: 0;
     flex-direction: column;
     background-size: 100%;
-    background-position: 200% 100%;
+    background-position: bottom;
   }
 }
 
 .l-top-request {
   background: linear-gradient(to bottom,#e4e4e4 90%, white);
   padding: 50px 0;
+}
+
+.l-top-faq {
+  width: 80%;
+  margin: 0 auto;
+  padding-bottom: 100px;
 }
