--- a/src/ejs/template/_head.ejs
+++ b/src/ejs/template/_head.ejs
@@ -21,6 +21,7 @@
 <meta name="twitter:url" content="" />
 <meta name="twitter:description" content="<%= description %>" />
 <meta name="twitter:image" content="" /><!--絶対パスで記述-->
+<link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 
 <title><%= title %></title>
 </head>
