--- a/src/scss/object/project/_home.scss
+++ b/src/scss/object/project/_home.scss
@@ -42,13 +42,6 @@
   font-size: 30px;
   text-align: center;
   margin-bottom: 30px;
-
-  // @include mq('u-sp') {
-  //   width: 90%;
-  //   margin: 0 auto;
-  //   margin-bottom: 20px;
-  //   font-size: 20px;
-  // }
 }
 
 .p-top-request__block {
@@ -378,4 +371,60 @@
 
 .p-top-project__listItem__working__week {
   margin-top: auto;
+}
+
+/*// -----------------------------------------------------------------
+//  p-top-faq__title
+// -----------------------------------------------------------------*/
+
+.p-top-faq__title {
+  font-size: 30px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.p-top-faq__list {
+  &:not(last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+.p-top-faq__question {
+  font-size: 20px;
+  background-color: #747474;
+  color: white;
+  padding: 5px 35px;
+}
+
+.p-top-faq__question__title {
+  position: relative;
+
+  &:before {
+    content: '\f35a';
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+
+    position: absolute;
+    top: 50%;
+    left: -25px;
+    margin-top: -.5em; // 文字1文字の半分のネガティブマージン
+  }
+}
+
+.p-top-faq__answer {
+  background: linear-gradient(-60deg, #ec8c8c 2%,white 8%,white 92%,#c4fcfc 98%);
+  border-radius: 0 0 30px 30px;
+  padding: 20px 30px;
+
+  display: none;
+}
+
+.arrowTransform {
+  &:before {
+    transform: rotate(90deg);
+  }
+}
+
+.p-top-faq__answer__text {
+  line-height: 35px;
 }
