--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -15,6 +15,32 @@ src/ejs/template/_head %>
     </div>
   </div>
 
+  <div class="l-top-aboutService" id="aboutService">
+    <ul class="p-top-aboutService__logo">
+      <% var serviceInitial   = ['T','T','J']; %>
+      <% var aboutServiceLogo = ['rust','ech','ob']; %>
+      <% for (var i = 0; i < aboutServiceLogo.length; i++) { %>
+        <li class="p-top-aboutService__logoList">
+          <span class="p-top-aboutService__logoList__initial" id="fadeLogoInitial<%= i+1 %>"><%= serviceInitial[i] %></span><%= aboutServiceLogo[i] %>
+        </li>
+      <% } %>
+    </ul>
+    <dl class="p-top-aboutService__explain">
+      <dt class="p-top-aboutService__explain__title">
+        <% for (var i = 0; i < serviceInitial.length; i++) { %>
+          <span class="p-top-aboutService__explain__titleInitial"><%= serviceInitial[i] %></span>
+        <% } %>
+        とは
+      </dt>
+      <span class="p-top-aboutService__explain__underline" id="extendUnderline"></span>
+      <dd class="p-top-aboutService__explain__text">
+        「TTJ」の作成目的としては、フリーランスエンジニアの人口増加を見込み、
+        そこに対して、今競合他社が少ない時に、案件探しといえば「TTJ」という
+        イメージを定着させ、案件紹介サイトのシェアの確保を狙う。
+      </dd>
+    </dl>
+  </div>
+
   <div class="l-top-request">
     <h2 class="p-top-request__title">統計に基づくクリエイター,エンジニアの要望</h2>
     <ul class="p-top-request__block">
