--- a/src/scss/object/project/_home.scss
+++ b/src/scss/object/project/_home.scss
@@ -38,6 +38,88 @@
 //  .p-top-aboutService
 // -----------------------------------------------------------------*/
 
+.p-top-aboutService__logoList {
+  font-size: 80px;
+  line-height: 180px;
+  font-weight: bold;
+  overflow: hidden; // ロゴのfadeinを隠すため
+  letter-spacing: 20px;
+
+  // TTJ の (最初の) T
+  &:first-child > .p-top-aboutService__logoList__initial {
+    color: #d9340a;
+  }
+
+  // TTJ の (2番目の) T
+  &:nth-child(2) > .p-top-aboutService__logoList__initial {
+    color: #2582bb;
+  }
+}
+
+.p-top-aboutService__logoList__initial {
+  position: relative;
+  right: 250px;
+  font-size: 180px;
+  opacity: 0;
+}
+
+// ロゴのフェードイン
+.fadeLogoInitial {
+  opacity: 1;
+  right: 0;
+  transition: 1.5s;
+}
+
+.p-top-aboutService__explain {
+  background-color: #343434;
+  color: white;
+  height: 370px;
+  width: 65%;
+  margin-left: auto;
+  padding: 10px 10px 10px 80px;
+  position: relative;
+}
+
+.p-top-aboutService__explain__title {
+  font-size: 80px;
+  font-weight: bold;
+  text-align: right;
+}
+
+.p-top-aboutService__explain__titleInitial {
+  letter-spacing: -10px;
+
+  &:first-child {
+    color: #d9340a;
+  }
+
+  &:nth-child(2) {
+    color: #2582bb;
+  }
+}
+
+.p-top-aboutService__explain__underline {
+  display: block;
+  position: absolute;
+  right: 0;
+  height: 2px;
+  width: 0;
+  background-color: white;
+}
+
+.extendUnderline {
+  width: 70%;
+  transition: 2.0s;
+}
+
+.p-top-aboutService__explain__text {
+  margin-top: 30px;
+}
+
+/*// -----------------------------------------------------------------
+//  .p-top-request
+// -----------------------------------------------------------------*/
+
 .p-top-request__title {
   font-size: 30px;
   text-align: center;
