--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -34,9 +34,14 @@ src/ejs/template/_head %>
       </dt>
       <span class="p-top-aboutService__explain__underline" id="extendUnderline"></span>
       <dd class="p-top-aboutService__explain__text">
-        「TTJ」の作成目的としては、フリーランスエンジニアの人口増加を見込み、
-        そこに対して、今競合他社が少ない時に、案件探しといえば「TTJ」という
-        イメージを定着させ、案件紹介サイトのシェアの確保を狙う。
+        TTJは今まで様々なITビジネスの営業に携わってきたIT業界の営業スペシャリストです。<br><br>
+        その中での経験からクライアントとエンジニア、双方のニーズの合致こそがIT業界の発展だと考えております。<br>
+        TTJではエンジニアのニーズを尊重し【あなたにマッチする案件】を提案します。
+        弊社の営業ノウハウには自信がありますので、【自走できるエンジニア】へのサポートもお任せ下さい。<br><br>
+        本当に自分のスキルに合った業務につけるのか...<br><br>
+        フリーランスとしてどのように営業すれば良いかわからない...<br><br>
+        単価の交渉のやり方...等<br><br>
+        まずはお気軽にLINEにてご登録下さい！
       </dd>
     </dl>
   </div>
