--- a/src/ejs/template/_footer.ejs
+++ b/src/ejs/template/_footer.ejs
@@ -1,3 +1,14 @@
+<% var img_path='/assets/images/'; %>
+
+<footer class="l-footer">
+  <img src="<%= img_path %>trust.png" class="c-footer-logo" alt="フッターのロゴ画像">
+  <small class="c-footer-copyright">&copy; 2020 TTJ Inc. All Rights Reserved.</small>
+  <div class="c-footer-link">
+    <a class="c-footer-link__twitter" href="#">twitterリンク</a>
+    <a class="c-footer-link__corporate" href="#">コーポレートサイト</a>
+  </div>
+</footer>
+
 </div><!-- l-wrap -->
 </body>
 </html>
