--- a/src/scss/object/project/_home.scss
+++ b/src/scss/object/project/_home.scss
@@ -73,10 +73,10 @@
 .p-top-aboutService__explain {
   background-color: #343434;
   color: white;
-  height: 370px;
+  height: 100%;
   width: 65%;
   margin-left: auto;
-  padding: 10px 10px 10px 80px;
+  padding: 10px 10px 20px 80px;
   position: relative;
 }
 
