--- a/src/scss/foundation/_var.scss
+++ b/src/scss/foundation/_var.scss
@@ -31,3 +31,21 @@ $colorDark: #012c45;
 $colorBlack: #222;
 $colorGray: #666;
 $colorWhite: #fff;
+
+@mixin circlePattern($pattern) {
+  position: relative;
+  display: inline-block;
+  width: 250px;
+  height: 250px;
+  border-radius: 250px;
+  @if ($pattern=="day") {
+    margin-bottom: 50px;
+    background-color: rgba(#E45764, .9);
+  } @else if ($pattern=="match") {
+    margin-right: 100px;
+    background-color: rgba(#63C5FF, .9);
+  } @else {
+    margin-left: 100px;
+    background-color: rgba(#2EE32F, .9);
+  }
+}
